<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <TextView
        android:id="@+id/titleText"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:text="@string/settings_Title"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/settingsText"
        android:layout_marginTop="80dp"
        />
    <TextView
        android:id="@+id/settingsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/settings1"
        android:text="@string/ship_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="toggleButton"
        app:layout_constraintTop_toBottomOf="@id/titleText"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="200dp"
        />
    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOff="@string/black"
        android:textOn="@string/white"
        app:layout_constraintStart_toEndOf="@id/settingsText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleText"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="200dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>