<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LeaderboardActivity">
    <TextView
        android:id="@+id/boardTitle"
        android:layout_width="120dp"
        android:layout_height="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/leaderboard"
        android:textSize="20sp"
        android:layout_marginTop="-500dp" />

    <TableLayout
        android:layout_width="300dp"
        android:layout_height="160dp"
        android:id="@+id/boardTable"
        app:layout_constraintTop_toTopOf="@+id/boardTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="-300dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/player1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player_1"
                android:layout_gravity="start"/>
            <TextView
                android:id="@+id/player_1Score"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="50dp"
                android:singleLine="true"
                android:text="@string/player_1score"/>
        </TableRow>

    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>